# BigDataProject

./: 1-simple-cnn.ipynb  Dockerfile  LICENSE  README.md  app.py  requirements.txt  server.py
BDD/: projetbigdata_askedquestion.sql  projetbigdata_player.sql  projetbigdata_question.sql  projetbigdata_quiz.sql
ML/: 7-lstm-98.ipynb
ProtoV1Robin/AudioDevice/: index.html
ProtoV1Robin/FlaskApp/: app.py
ProtoV1Robin/FlaskApp/models/: last-day-2-92.pth  lstm-75-v4-acc-85.pth  lstm-75-v4.pth  lstm-75.pth  lstm-perso-audio-85.pth  lstm-perso-audio-93.pth  lstm98-77epch.pth
ProtoV1Robin/FlaskApp/modules/: functions.py  (+2 more)
app/: README.md  __init__.py  app.py  config.py  pyproject.toml  requirements.txt  seed_questions.py
app/controllers/: user_controller.py
app/data/: questions.json
app/migrations/versions/: 3c1fbbf902b7_.py  51fd5bd354b0_.py  5f21b28cd443_.py  8d7c8f13ae50_.py  bffda542ce18_.py  d1fe773b2605_.py  e163dad193b5_.py
app/models/: asked_question.py  question.py  user.py
app/modules/: mlfunctions.py
app/routes/: __init__.py  auth.py  dashboard.py  main.py  quiz.py  user_bp.py
app/seed/: seed_questions.py
app/static/: style.css
app/static/js/: capture.js
app/templates/: dashboard.html  footer.html  home.html  index.html  logged_header.html  login.html  question.html  quiz_settings.html  quiz_starter.html  quiz_summary.html  signup.html
login/: app.py
login/templates/: home.html  login.html  styles.css
question/: update_question.py
static/: createQuizz.html  index.html  quizz.html
static/css/: customStyle.css
templates/: index.html
(+3 files in other folders)
